syntax = "proto3";
package model;

option go_package = "gen/services/model";

message Session {
  string Id = 1;
  int64 CustomerId = 2;
  int64 UpdatedAt = 3; //nsec utc
}